# autoPlan_0

./: .gitignore
src/turtlebot3_gazebo/: CMakeLists.txt
src/turtlebot3_gazebo/launch/: hospital_world.launch.py  my_world.launch.py
src/turtlebot3_gazebo/models/hospital/: model.sdf
src/turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
src/turtlebot3_gazebo/worlds/: aisle.world  big_rect.world  classroom.world  corridor.world  corridor3.world  corridor4.world  corridor5.world  hospital.world  my_world.world
src/uvc1_gazebo/: CMakeLists.txt  package.xml  setup.py
src/uvc1_gazebo/launch/: turtlebot3_autorace_2020.launch.py  turtlebot3_dqn_stage1.launch.py  turtlebot3_dqn_stage2.launch.py  turtlebot3_dqn_stage3.launch.py  turtlebot3_dqn_stage4.launch.py  turtlebot3_empty_world.launch.py  turtlebot3_hospital_world.launch.py  turtlebot3_house.launch.py  turtlebot3_my_world.launch.py  turtlebot3_robot_state_publisher.launch.py  turtlebot3_spawn.launch.py  turtlebot3_world.launch.py  uvc1_my_world.launch.py  uvc1_spawn.launch.py
src/uvc1_gazebo/models/turtlebot3_waffle/: model.sdf
src/uvc1_gazebo/models/uvc1_common/: model.config
src/uvc1_gazebo/models/uvc1_virofighter/: model-1_4.sdf  model.config  model.sdf
src/uvc1_gazebo/src/: ultrasound.cpp
src/uvc1_gazebo/urdf/: uvc1_virofighter.urdf
src/uvc1_gazebo/worlds/: corridors2.world  sote_1.world
