<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" 
            schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>uvc1_gazebo</name>
  <version>0.1.0</version>
  <description>
    Gazebo simulation package for the UVC ViroFighter Robot.
    Contains C++ nodes, Gazebo plugins, Python nodes,
    models, worlds, launch files, and URDF descriptions.
  </description>

  <maintainer email="olipravin18@gmail.com">Pravin</maintainer>
  <license>Apache-2.0</license>

  <!-- ================= BUILD TOOL ================= -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ================= BUILD DEPENDENCIES ================= -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>

  <depend>vfmessages</depend>

  <!-- ================= TEST DEPENDENCIES ================= -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- ================= EXPORT ================= -->
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>

</package>